--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -3,11 +3,11 @@ name: Azure Static Web Apps CI/CD
 on:
   push:
     branches:
-      - main  # Replace with your default branch name
+      - master  # Replace with your default branch name
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
-      - main
+      - master
 
 jobs:
   build_and_deploy_job:
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16' # Use the Node.js version mentioned in the README
+        node-version: '16' # Use Node.js version 16 or higher
 
     - name: Install dependencies
       run: npm install
@@ -33,5 +33,6 @@ jobs:
     - name: Deploy to Azure Static Web Apps
       uses: Azure/static-web-apps-deploy@v1
       with:
-        app_location: "src"         # The folder containing your source code
-        output_location: "dist"     # The folder containing the final build output
+        app_location: "."          # Root of your project
+        output_location: "dist"    # Folder where the built files are generated
+
